# g6_hpes_2019

./: .gitignore  README.md
assignment1/: Part1_deliverables.md  Part2_deliverables.md  part1.sh  part2.sh
assignment_1/: Part1_deliverables.md  Part2_deliverables.md  part2.sh
assignment_1/QEMU/: video.txt
assignment_1/QEMU/images/: u-boot
final_project/: Clasificador de dados poliédricos.ipynb  README  dice.py  dice_detector.py  results  tutorial.py
homework1/: .gitignore  Makefile  Valgrind_case1.txt  Valgrind_case2.txt  Valgrind_case3.txt  Valgrind_case4.txt  case1.txt  case2.txt  case3.txt  log.txt  setup.sh
homework1/memcheck/: .gitignore  Makefile.am  README  clean.sh  configure.ac  setup.sh
homework1/memcheck/lib/: Makefile.am  libmemcheck.c
homework1/memcheck/src/: Makefile.am  memcheck.c
homework2/: README  make.def  makefile  notes  pi.c  pi_loop  pi_omp_private.c  pi_omp_teams.c  pi_omp_threads.c
